--- a/index.html
+++ b/index.html
@@ -4,9 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <!-- LINK  -->
+    <link rel="stylesheet" href="styles/style.css">
+    <title>Portfolio 2023</title>
 </head>
 <body>
-    <h1>mon portfolio</h1>
+    <header id="header">
+        <nav id="nav">
+            <div class="nav-bar">
+                <ul class="nav">
+                    <li><a href="#">Accueil</a></li>
+                    <li><a href="#">A propos</a></li>
+                    <li><a href="#">Portfolio</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+
+    <section id="Accueil">
+        <div>
+            <div id="txt-nom">
+                <h1>Timothé Hege <span>Etudiant BUT MMI</span></h1>
+            </div>
+            <div id="photo"></div>
+        </div>
+    </section>
+       
+        <script src="app.js"></script>
 </body>
 </html>
