--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="styles/style.css">
     <title>Portfolio 2023</title>
 </head>
+
 <body>
     <header id="header">
         <nav id="nav">
@@ -23,14 +25,22 @@
     </header>
 
     <section id="Accueil">
-        <div>
+        <div id="container">
             <div id="txt-nom">
-                <h1>Timothé Hege <span>Etudiant BUT MMI</span></h1>
+                <div id="nom">
+                    <h1>Timothé Hege </h1>
+                </div>
+                <div id="profession">
+                    <h1>Etudiant BUT MMI</h1>
+                </div>
             </div>
-            <div id="photo"></div>
+            <div id="photo">
+                <img class="photo ac" src="/ressources/images/photo-accueil2.png" alt="">
+            </div>
         </div>
     </section>
-       
-        <script src="app.js"></script>
+
+    <script src="app.js"></script>
 </body>
+
 </html>
