--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
                 </div>
             </div>
             <div id="photo">
-                <img class="photo ac" src="/ressources/images/photo-accueil2.png" alt="">
+                <img class="photo ac" src="/ressources/images/photo_all.png" alt="">
+                <!-- <img class="photo bg" src="/ressources/images/photo-accueil2.png" alt=""> -->
+                <!-- <img class="photo star" src="/ressources/images/photo-accueil2.png" alt=""> -->
             </div>
         </div>
     </section>
